tests/pass/object_set_property_basic.lum
person = { name: "sam" }
person.name = "joe"
__emit(person.name, true, false)
