tests/fail/object_property_non_object.lum
x = 10
__emit(x.name, true, false)
